--- a/config.yaml
+++ b/config.yaml
@@ -3,4 +3,14 @@
 "calib_result_path": "output/calib_result.yaml"
 "corner_edge_length": 0.01
 "corner_size": [12, 7]  # [x, y]
-optim_iterations: 5
+"optim_iterations": 200
+"remove_iter": 100  # 在该轮次移除外点
+"meta_data_path": "output/meta_data.csv"
+"image_rotation": 0  # -1: 不旋转, 0: 顺时针90度, 1: 180度, 2: 逆时针90度
+"camera_params":
+  - {id: 0, width: 800, height: 600, fps: 60, fourcc: "MJPG"}
+  - {id: 2, width: 800, height: 600, fps: 60, fourcc: "MJPG"}
+  - {id: 4, width: 800, height: 600, fps: 60, fourcc: "MJPG"}
+  - {id: 6, width: 800, height: 600, fps: 60, fourcc: "MJPG"}
+"delta": 5  # 鲁棒核函数分段参数
+"outlier_threshold": 5  # 外点阈值，平均每个像素的重投影误差
