--- a/config.yaml
+++ b/config.yaml
@@ -8,9 +8,9 @@
 "meta_data_path": "output/meta_data.csv"
 "image_rotation": 0  # -1: 不旋转, 0: 顺时针90度, 1: 180度, 2: 逆时针90度
 "camera_params":
-  - {id: 0, width: 800, height: 600, fps: 60, fourcc: "MJPG"}
-  - {id: 2, width: 800, height: 600, fps: 60, fourcc: "MJPG"}
-  - {id: 4, width: 800, height: 600, fps: 60, fourcc: "MJPG"}
-  - {id: 6, width: 800, height: 600, fps: 60, fourcc: "MJPG"}
+  - {id: 0, width: 800, height: 600, fps: 60, fourcc: "MJPG", exposure: 166}
+  - {id: 2, width: 800, height: 600, fps: 60, fourcc: "MJPG", exposure: 166}
+  - {id: 4, width: 800, height: 600, fps: 60, fourcc: "MJPG", exposure: 166}
+  - {id: 6, width: 800, height: 600, fps: 60, fourcc: "MJPG", exposure: 166}
 "delta": 5  # 鲁棒核函数分段参数
 "outlier_threshold": 5  # 外点阈值，平均每个像素的重投影误差
